BUG#20121 missing err msg for ENOSPC

getting BACKUP_FRAGMENT_REF in LQH from BACKUP would bail on
ndbrequire(false) instead of having good error message.

Can re-use error code from BACKUP as it's a FsRef error code,
which is NDBD_EXIT... except when it isn't.